save data files in Experiment_results/

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -13,19 +13,19 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "%matplotlib inline\n",
+    "# %matplotlib inline\n",
     "\n",
-    "import io, os, sys, types\n",
-    "from IPython import get_ipython\n",
-    "from nbformat import read\n",
-    "from IPython.core.interactiveshell import InteractiveShell\n",
+    "# import io, os, sys, types\n",
+    "# from IPython import get_ipython\n",
+    "# from nbformat import read\n",
+    "# from IPython.core.interactiveshell import InteractiveShell\n",
     "\n",
     "\n",
     "import math\n",
     "import numpy as np\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.colors as colors\n",
-    "import matplotlib.cm as cmx\n",
+    "# import matplotlib.pyplot as plt\n",
+    "# import matplotlib.colors as colors\n",
+    "# import matplotlib.cm as cmx\n",
     "import os"
    ]
   },
@@ -44,8 +44,8 @@
     "\n",
     "N_q = len(tau_vals)\n",
     "\n",
-    "c_Norm = colors.Normalize(vmin=0, vmax=1)\n",
-    "scalarMap = cmx.ScalarMappable(norm=c_Norm, cmap=plt.get_cmap('cool'))"
+    "# c_Norm = colors.Normalize(vmin=0, vmax=1)\n",
+    "# scalarMap = cmx.ScalarMappable(norm=c_Norm, cmap=plt.get_cmap('cool'))"
    ]
   },
   {
@@ -388,175 +388,70 @@
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": 29,
    "metadata": {},
+   "outputs": [],
+   "source": [
+    "def write_data(data, filename, setting=None):\n",
+    "    with open(filename, 'w') as outfile:\n",
+    "        if setting is not None: outfile.write('# Setting: {0}\\n'.format(setting))\n",
+    "        if len(data.shape) == 1: data = data.reshape(-1, 1)\n",
+    "        outfile.write('# Array shape: {0}\\n \\n'.format(data.shape))\n",
+    "\n",
+    "        for data_slice in data:\n",
+    "            np.savetxt(outfile, data_slice, fmt='%-15.8g')\n",
+    "            outfile.write('\\n')\n",
+    "\n",
+    "\n",
+    "def write_data_overview(category, setting, tau_lst, file_name):\n",
+    "    with open(file_name, 'w') as f:\n",
+    "        f.write(\"Tested on \"+category+\": \"+str(setting)+\"\\n\") \n",
+    "        f.write(str(tau_lst))\n",
+    "    \n",
+    "write_data_overview('ca', 'se', tau_vals, \"try.txt\")\n",
+    "    \n",
+    "def save_data(foldername, file_name, tau_lst, data_dict):\n",
+    "    category, setting = file_name[0], file_name[1]    \n",
+    "    write_data_overview(category, setting, tau_lst, foldername+\"overview.txt\")\n",
+    "\n",
+    "    for data_name in data_dict:\n",
+    "        write_data(data_dict[data_name], foldername+data_name+'.txt')\n",
+    "        \n",
+    "    return\n",
+    "\n",
+    "save_data('Experiment_results/SGD', ('C', 'S'), tau_vals, {'dataset': np.reshape(np.random.uniform(0, 4, 100), (2, 5, 10))})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "### Export as data files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def write_data(data, filename, setting):\n",
-    "    with open(filename, 'w') as outfile:\n",
-    "        outfile.write('# Setting: {0}\\n'.format(setting))\n",
-    "        outfile.write('# Array shape: {0}\\n'.format(data.shape))\n",
+    "# def write_data(data, filename, setting=None):\n",
+    "#     with open(filename, 'w') as outfile:\n",
+    "#         if setting is not None: outfile.write('# Setting: {0}\\n'.format(setting))\n",
+    "#         outfile.write('# Array shape: {0}\\n \\n'.format(data.shape))\n",
     "\n",
-    "        for data_slice in data:\n",
-    "            np.savetxt(outfile, data_slice, fmt='%-15.8g')\n",
-    "            outfile.write('\\n')\n",
+    "#         for data_slice in data:\n",
+    "#             np.savetxt(outfile, data_slice, fmt='%-15.8g')\n",
+    "#             outfile.write('\\n')\n",
     "\n",
     "            \n",
-    "dt = np.random.uniform(0, 0.0000001, 120)\n",
-    "dt = np.reshape(dt, (3, 4, 10))\n",
-    "# print(dt.shape)\n",
-    "write_data(dt, 'test.txt', 'setting')\n",
-    "            \n",
-    "# def export_file(name, data):\n",
-    "#     return 0"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 60,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(3, 4, 10)"
-      ]
-     },
-     "execution_count": 60,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "def read_data(f):\n",
-    "    return np.loadtxt(f)\n",
-    "    \n",
-    "a = read_data('test.txt')\n",
-    "b = np.reshape(a, (3, 4, 10))\n",
-    "\n",
-    "b.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 61,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[8.30578861e-08, 4.56116317e-08, 1.75834200e-08, 2.19332379e-08,\n",
-       "         8.21751889e-08, 5.76189244e-08, 1.69888953e-08, 4.64844673e-08,\n",
-       "         1.65456624e-08, 3.14964942e-08],\n",
-       "        [4.74242910e-08, 7.67745847e-08, 1.38684583e-08, 3.54797098e-08,\n",
-       "         9.87401185e-10, 4.99683230e-08, 7.06964560e-08, 1.09851738e-08,\n",
-       "         6.46287773e-08, 7.07465596e-08],\n",
-       "        [1.56802860e-08, 6.85727138e-08, 2.92431124e-08, 8.30171095e-08,\n",
-       "         5.95020677e-08, 1.84392306e-08, 9.86790409e-08, 2.54056428e-08,\n",
-       "         6.52522468e-08, 4.72025758e-08],\n",
-       "        [4.95246368e-08, 2.24381704e-08, 2.37126719e-08, 2.95327723e-08,\n",
-       "         9.12279512e-08, 4.42083549e-08, 2.75414243e-08, 6.88784505e-08,\n",
-       "         6.05895936e-08, 8.25604107e-08]],\n",
-       "\n",
-       "       [[7.75154816e-08, 4.62470595e-08, 1.82988996e-08, 4.10043018e-08,\n",
-       "         2.69209988e-08, 2.52753583e-08, 7.13260244e-08, 4.36391853e-09,\n",
-       "         1.80627769e-08, 7.39750968e-08],\n",
-       "        [8.29262029e-08, 7.08135711e-08, 4.02367180e-09, 4.23773190e-08,\n",
-       "         5.49538021e-08, 4.08181996e-08, 3.47433825e-08, 2.30074791e-09,\n",
-       "         2.70806629e-08, 9.36259451e-08],\n",
-       "        [1.56316588e-08, 1.97885804e-08, 2.52019046e-08, 8.11417966e-08,\n",
-       "         3.21650371e-08, 5.07453185e-08, 1.77168603e-08, 7.59512179e-08,\n",
-       "         7.20573840e-08, 6.40562254e-08],\n",
-       "        [2.07469879e-08, 9.70756290e-08, 7.20411945e-08, 2.68341405e-08,\n",
-       "         7.53520548e-09, 8.56792403e-08, 6.12200528e-08, 7.17840893e-08,\n",
-       "         6.00930948e-08, 4.34900208e-08]],\n",
-       "\n",
-       "       [[2.53938651e-08, 6.13602561e-08, 1.27564436e-08, 3.10149505e-08,\n",
-       "         4.56825304e-08, 6.34944832e-08, 6.47176704e-08, 5.48347498e-08,\n",
-       "         7.21873418e-08, 7.36168895e-08],\n",
-       "        [4.41798621e-08, 6.01500400e-08, 4.68568053e-08, 7.81327154e-08,\n",
-       "         7.06134858e-08, 8.99982561e-08, 4.26436389e-08, 7.20047401e-08,\n",
-       "         7.06140687e-08, 9.46560818e-08],\n",
-       "        [1.94754193e-08, 5.57536489e-08, 1.58402945e-08, 1.38412792e-08,\n",
-       "         5.76017557e-08, 8.95294905e-08, 8.12086103e-09, 9.28835364e-08,\n",
-       "         3.91054911e-08, 8.00729634e-09],\n",
-       "        [7.47973517e-08, 9.63855772e-09, 1.87907551e-08, 7.61741205e-08,\n",
-       "         4.92185584e-08, 8.47397532e-08, 5.70708098e-08, 4.39539412e-08,\n",
-       "         8.08210329e-08, 8.49754958e-09]]])"
-      ]
-     },
-     "execution_count": 61,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "dt"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 62,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([[[8.3057886e-08, 4.5611632e-08, 1.7583420e-08, 2.1933238e-08,\n",
-       "         8.2175189e-08, 5.7618924e-08, 1.6988895e-08, 4.6484467e-08,\n",
-       "         1.6545662e-08, 3.1496494e-08],\n",
-       "        [4.7424291e-08, 7.6774585e-08, 1.3868458e-08, 3.5479710e-08,\n",
-       "         9.8740118e-10, 4.9968323e-08, 7.0696456e-08, 1.0985174e-08,\n",
-       "         6.4628777e-08, 7.0746560e-08],\n",
-       "        [1.5680286e-08, 6.8572714e-08, 2.9243112e-08, 8.3017110e-08,\n",
-       "         5.9502068e-08, 1.8439231e-08, 9.8679041e-08, 2.5405643e-08,\n",
-       "         6.5252247e-08, 4.7202576e-08],\n",
-       "        [4.9524637e-08, 2.2438170e-08, 2.3712672e-08, 2.9532772e-08,\n",
-       "         9.1227951e-08, 4.4208355e-08, 2.7541424e-08, 6.8878450e-08,\n",
-       "         6.0589594e-08, 8.2560411e-08]],\n",
-       "\n",
-       "       [[7.7515482e-08, 4.6247060e-08, 1.8298900e-08, 4.1004302e-08,\n",
-       "         2.6920999e-08, 2.5275358e-08, 7.1326024e-08, 4.3639185e-09,\n",
-       "         1.8062777e-08, 7.3975097e-08],\n",
-       "        [8.2926203e-08, 7.0813571e-08, 4.0236718e-09, 4.2377319e-08,\n",
-       "         5.4953802e-08, 4.0818200e-08, 3.4743382e-08, 2.3007479e-09,\n",
-       "         2.7080663e-08, 9.3625945e-08],\n",
-       "        [1.5631659e-08, 1.9788580e-08, 2.5201905e-08, 8.1141797e-08,\n",
-       "         3.2165037e-08, 5.0745319e-08, 1.7716860e-08, 7.5951218e-08,\n",
-       "         7.2057384e-08, 6.4056225e-08],\n",
-       "        [2.0746988e-08, 9.7075629e-08, 7.2041195e-08, 2.6834141e-08,\n",
-       "         7.5352055e-09, 8.5679240e-08, 6.1220053e-08, 7.1784089e-08,\n",
-       "         6.0093095e-08, 4.3490021e-08]],\n",
-       "\n",
-       "       [[2.5393865e-08, 6.1360256e-08, 1.2756444e-08, 3.1014950e-08,\n",
-       "         4.5682530e-08, 6.3494483e-08, 6.4717670e-08, 5.4834750e-08,\n",
-       "         7.2187342e-08, 7.3616889e-08],\n",
-       "        [4.4179862e-08, 6.0150040e-08, 4.6856805e-08, 7.8132715e-08,\n",
-       "         7.0613486e-08, 8.9998256e-08, 4.2643639e-08, 7.2004740e-08,\n",
-       "         7.0614069e-08, 9.4656082e-08],\n",
-       "        [1.9475419e-08, 5.5753649e-08, 1.5840295e-08, 1.3841279e-08,\n",
-       "         5.7601756e-08, 8.9529490e-08, 8.1208610e-09, 9.2883536e-08,\n",
-       "         3.9105491e-08, 8.0072963e-09],\n",
-       "        [7.4797352e-08, 9.6385577e-09, 1.8790755e-08, 7.6174121e-08,\n",
-       "         4.9218558e-08, 8.4739753e-08, 5.7070810e-08, 4.3953941e-08,\n",
-       "         8.0821033e-08, 8.4975496e-09]]])"
-      ]
-     },
-     "execution_count": 62,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "b"
+    "# dt = np.random.uniform(0, 0.0000001, 120)\n",
+    "# dt = np.reshape(dt, (3, 4, 10))\n",
+    "# # print(dt.shape)\n",
+    "# write_data(dt, 'test.txt')"
    ]
   },
   {
@@ -568,11 +463,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def get_plot_name(changed_setting, distro, datasize, stepsize, s_test):\n",
+    "def get_file_name(changed_setting, distro, datasize, stepsize, s_test):\n",
     "    print(changed_setting)\n",
     "    if s_test:\n",
     "        return ('Shuffle', True)\n",
@@ -582,12 +477,12 @@
     "        return ('Data size', datasize)\n",
     "    elif changed_setting=='step_size':\n",
     "        return ('Step size', stepsize)\n",
-    "    else: raise Exception ('Cannot get plot name')"
+    "    else: raise Exception ('Cannot get file name')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -608,6 +503,7 @@
     "        \n",
     "    # for each setting = [distro, datasize, stepsize]\n",
     "    for idx, setting in enumerate(setting_lst):\n",
+    "        \n",
     "        # generate all the data\n",
     "        distro, datasize, stepsize = setting[0], int(setting[1]), setting[2]\n",
     "        q_true = get_q_true(distro, tau_lst)\n",
@@ -622,41 +518,87 @@
     "            dataset = shuffled_dt\n",
     "        q_est_res, q_est_proc = get_q_ests(dataset, stepsize, tau_lst)\n",
     "        E = get_normalized_e(q_true, q_batches, q_est_res)\n",
-    "#         print(E)\n",
     "        \n",
+    "        data_dict = {\n",
+    "            'q_true': q_true,\n",
+    "            'q_batches': q_batches,\n",
+    "            'q_est_res': q_est_res,\n",
+    "            'q_est_proc': q_est_proc,\n",
+    "            'E': E\n",
+    "        }\n",
+    "#         print(E)\n",
     "#         # generate charts and tables?\n",
-    "        plot_name = get_plot_name(changed_setting, distro, datasize, stepsize, s_test)\n",
-    "        plot_charts(folder_name, plot_name, tau_lst, q_batches, q_est_res, q_est_proc, q_true, E)"
+    "        file_name = get_file_name(changed_setting, distro, datasize, stepsize, s_test)\n",
+    "        save_data(folder_name, file_name, tau_lst, data_dict)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "distro\n",
+      "all_comp distro\n",
+      "[['mix' '1000' 'const']\n",
+      " ['gau_1' '1000' 'const']\n",
+      " ['gau_2' '1000' 'const']\n",
+      " ['exp' '1000' 'const']]\n",
+      "distro\n",
+      "distro\n",
+      "distro\n",
+      "distro\n",
+      "data_size\n",
+      "all_comp datasize\n",
+      "[['gau_1' '100' 'const']\n",
+      " ['gau_1' '1000' 'const']\n",
+      " ['gau_1' '100000' 'const']]\n",
+      "data_size\n",
+      "data_size\n",
+      "data_size\n",
+      "step_size\n",
+      "[['gau_1' '1000' 'const']\n",
+      " ['gau_1' '1000' '2_div_sqrt_k']\n",
+      " ['gau_1' '1000' '0.002_div_sqrt_k']]\n",
+      "step_size\n",
+      "step_size\n",
+      "step_size\n",
+      "data_sequence\n",
+      "[['gau_1' '1000' 'const']\n",
+      " ['gau_1' '1000' 'const']]\n",
+      "distro\n",
+      "distro\n"
+     ]
+    }
+   ],
    "source": [
-    "# # sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequance']        \n",
+    "# sgd_lst = ['distro', 'data_size', 'step_size', 'data_sequance']        \n",
     "\n",
-    "# def all_sgd_comparisons():\n",
-    "#     for t in sgd_lst:\n",
-    "#         print (t)\n",
-    "#         folder_name = \"Experiment_results/SGD/\"+t+\"/\"\n",
-    "#         if t=='distro':\n",
-    "#             quantile_sgd_compare(folder_name, distros, [1000], ['const'], True)\n",
-    "#         elif t=='data_size':\n",
-    "#             quantile_sgd_compare(folder_name, ['gau_1'], [100, 1000, 100000], ['const'], True)\n",
-    "#         elif t=='step_size':\n",
-    "#             quantile_sgd_compare(folder_name, ['gau_1'], [1000], stepsizes, True)\n",
-    "#         elif t=='data_sequence':\n",
-    "#             quantile_sgd_compare(folder_name, ['gau_1', 'gau_1'], [1000], ['const'], False, True)\n",
+    "def all_sgd_comparisons():\n",
+    "    for t in sgd_lst:\n",
+    "        print (t)\n",
+    "        folder_name = \"Experiment_results/SGD/\"+t+\"/\"\n",
+    "        if t=='distro':\n",
+    "            print (\"all_comp distro\")\n",
+    "            quantile_sgd_compare(folder_name, distros, [1000], ['const'], True)\n",
+    "        elif t=='data_size':\n",
+    "            print (\"all_comp datasize\")\n",
+    "            quantile_sgd_compare(folder_name, ['gau_1'], [100, 1000, 100000], ['const'], True)\n",
+    "        elif t=='step_size':\n",
+    "            quantile_sgd_compare(folder_name, ['gau_1'], [1000], stepsizes, True)\n",
+    "        elif t=='data_sequence':\n",
+    "            quantile_sgd_compare(folder_name, ['gau_1', 'gau_1'], [1000], ['const'], False, True)\n",
     "            \n",
     "            \n",
-    "# all_sgd_comparisons()"
+    "all_sgd_comparisons()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
