--- a/QuantEst/sgd_est_experiment/Experiment_plots.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_plots.ipynb
@@ -2,6 +2,22 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "%matplotlib inline\n",
+    "\n",
+    "\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import matplotlib.colors as colors\n",
+    "import matplotlib.cm as cmx\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 19,
    "metadata": {},
    "outputs": [],
@@ -184,6 +200,70 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[[6.3939354e-08, 4.8248889e-08, 2.3890933e-08, 7.3412003e-08,\n",
+       "         3.6470584e-09, 4.0659487e-09, 6.3382107e-08, 7.3801053e-08,\n",
+       "         6.3722725e-08, 1.8639314e-08],\n",
+       "        [9.2309291e-08, 7.4106430e-08, 8.8967429e-08, 1.0070261e-08,\n",
+       "         1.9192338e-08, 3.0859517e-08, 4.2780812e-08, 1.0751033e-08,\n",
+       "         8.4456881e-08, 6.1689471e-08],\n",
+       "        [6.6299634e-08, 3.1706912e-08, 7.2418111e-08, 7.0329920e-08,\n",
+       "         2.8299654e-08, 6.1595084e-09, 9.4813087e-08, 9.3208194e-08,\n",
+       "         7.4217968e-08, 9.6803649e-08],\n",
+       "        [7.5404142e-08, 8.1479140e-08, 5.5613675e-08, 3.2217819e-08,\n",
+       "         1.8559055e-08, 9.4909773e-08, 9.0906584e-08, 6.4544075e-08,\n",
+       "         5.1931711e-08, 8.0792162e-08]],\n",
+       "\n",
+       "       [[3.6976403e-08, 8.0281716e-08, 1.5709511e-08, 6.2359394e-08,\n",
+       "         5.8554471e-08, 7.4177461e-08, 4.1091653e-08, 7.7641208e-09,\n",
+       "         6.4356513e-09, 1.2968479e-08],\n",
+       "        [7.9582691e-08, 9.2352129e-08, 1.5298018e-08, 2.9210862e-08,\n",
+       "         6.5120433e-08, 5.1851406e-08, 6.0243839e-08, 1.4216883e-08,\n",
+       "         9.6705070e-08, 5.6694991e-08],\n",
+       "        [7.9176832e-08, 3.0739344e-08, 7.7946394e-08, 6.2561344e-08,\n",
+       "         7.3357536e-08, 6.4817331e-08, 8.5999590e-08, 5.5771600e-08,\n",
+       "         6.9474701e-08, 1.9045949e-08],\n",
+       "        [6.9884154e-08, 2.8163937e-08, 4.7397058e-08, 2.9083311e-08,\n",
+       "         5.8809527e-08, 6.1270940e-08, 8.9358894e-08, 9.9646712e-08,\n",
+       "         4.5062712e-08, 1.8861820e-08]],\n",
+       "\n",
+       "       [[2.1298085e-08, 1.0324958e-08, 3.4923750e-08, 5.6148329e-08,\n",
+       "         7.7423447e-08, 3.2821596e-08, 4.3038715e-08, 3.1347037e-08,\n",
+       "         5.4977825e-08, 2.4411556e-08],\n",
+       "        [3.1685874e-08, 5.3092427e-08, 8.2835921e-08, 4.1777344e-08,\n",
+       "         5.2191606e-08, 1.0155167e-08, 7.7809057e-08, 5.1152562e-08,\n",
+       "         5.9242809e-08, 8.6343755e-09],\n",
+       "        [2.6302198e-08, 3.2626526e-08, 9.0930758e-08, 2.4304478e-08,\n",
+       "         7.9885570e-08, 8.9304181e-08, 9.4314107e-08, 2.3647306e-08,\n",
+       "         3.1771429e-08, 1.1451617e-08],\n",
+       "        [5.6045132e-09, 6.3510902e-09, 6.9349689e-08, 5.6255399e-08,\n",
+       "         1.1428234e-08, 9.3755570e-08, 3.1365007e-08, 2.4009035e-08,\n",
+       "         4.8158355e-08, 2.3245015e-09]]])"
+      ]
+     },
+     "execution_count": 21,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "def read_data(file):\n",
+    "    with open (file) as f:\n",
+    "        s = f.readline()[16:-2]\n",
+    "        shape = tuple(int(i) for i in s.split(\",\"))\n",
+    "        data = np.reshape(np.loadtxt(f), shape)\n",
+    "    return data\n",
+    "    \n",
+    "read_data('test.txt')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 23,
    "metadata": {},
    "outputs": [],
@@ -212,6 +292,13 @@
     "    plt.savefig(file_name+\"_err.png\")\n",
     "    "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
