SGD experiment plots with dataset done

--- a/QuantEst/sgd_est_experiment/Experiment_final.ipynb
+++ b/QuantEst/sgd_est_experiment/Experiment_final.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -50,7 +50,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -185,7 +185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -218,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -284,7 +284,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -339,7 +339,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -353,43 +353,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Plots"
+    "### Export data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def plot_charts(folder_name, plot_name, tau_lst, q_batches, sgd_res, sgd_proc, q_true, e):\n",
-    "    \n",
-    "#     print (\"compare results with stripe plots\")\n",
-    "    category, setting = plot_name[0], plot_name[1]\n",
-    "    ax_name = 'Tested on '+category+': '+str(setting)\n",
-    "    file_name = folder_name+str(setting)\n",
-    "    \n",
-    "    \n",
-    "    fig_res, lgd_res = plot_spectrum_stripes(ax_name, tau_lst, q_batches, sgd_res)\n",
-    "    title = fig_res.suptitle('Batch vs SGD quantile results')\n",
-    "    plt.savefig(file_name+\"_res.png\", bbox_extra_artists=[lgd_res, fig_res], bbox_inches='tight')\n",
-    "    \n",
-    "\n",
-    "    fig_proc, lgd_proc = plot_procs(ax_name, tau_lst, q_true, sgd_proc)\n",
-    "    fig_proc.suptitle('SGD Quantile Estimation Processes')\n",
-    "    plt.savefig(file_name+\"_proc.png\", bbox_extra_artists=[lgd_proc, fig_proc], bbox_inches='tight')\n",
-    "\n",
-    "    \n",
-    "#     print (\"compare E results\")\n",
-    "#     e = compute_E_res(q_lst, q_batches, q_sgd_res)\n",
-    "    fig_err = plot_E_res(ax_name, tau_lst, e)\n",
-    "    plt.savefig(file_name+\"_err.png\")\n",
-    "    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,49 +378,19 @@
     "        f.write(\"Tested on \"+category+\": \"+str(setting)+\"\\n\") \n",
     "        f.write(str(tau_lst))\n",
     "    \n",
-    "write_data_overview('ca', 'se', tau_vals, \"try.txt\")\n",
+    "# write_data_overview('ca', 'se', tau_vals, \"try.txt\")\n",
     "    \n",
     "def save_data(foldername, file_name, tau_lst, data_dict):\n",
     "    category, setting = file_name[0], file_name[1]    \n",
-    "    write_data_overview(category, setting, tau_lst, foldername+\"overview.txt\")\n",
+    "    write_data_overview(category, setting, tau_lst, foldername+str(setting)+\"_\"+\"overview.txt\")\n",
     "\n",
     "    for data_name in data_dict:\n",
-    "        write_data(data_dict[data_name], foldername+data_name+'.txt')\n",
+    "        print (foldername+str(setting)+\"_\"+data_name+'.txt')\n",
+    "        write_data(data_dict[data_name], foldername+str(setting)+\"_\"+data_name+'.txt')\n",
     "        \n",
     "    return\n",
     "\n",
-    "save_data('Experiment_results/SGD', ('C', 'S'), tau_vals, {'dataset': np.reshape(np.random.uniform(0, 4, 100), (2, 5, 10))})"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "### Export as data files"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# def write_data(data, filename, setting=None):\n",
-    "#     with open(filename, 'w') as outfile:\n",
-    "#         if setting is not None: outfile.write('# Setting: {0}\\n'.format(setting))\n",
-    "#         outfile.write('# Array shape: {0}\\n \\n'.format(data.shape))\n",
-    "\n",
-    "#         for data_slice in data:\n",
-    "#             np.savetxt(outfile, data_slice, fmt='%-15.8g')\n",
-    "#             outfile.write('\\n')\n",
-    "\n",
-    "            \n",
-    "# dt = np.random.uniform(0, 0.0000001, 120)\n",
-    "# dt = np.reshape(dt, (3, 4, 10))\n",
-    "# # print(dt.shape)\n",
-    "# write_data(dt, 'test.txt')"
+    "# save_data('', ('C', 'S'), tau_vals, {'dataset': np.reshape(np.random.uniform(0, 4, 100), (2, 5, 10))})"
    ]
   },
   {
@@ -463,12 +402,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [],
    "source": [
     "def get_file_name(changed_setting, distro, datasize, stepsize, s_test):\n",
-    "    print(changed_setting)\n",
+    "#     print(changed_setting)\n",
     "    if s_test:\n",
     "        return ('Shuffle', True)\n",
     "    elif changed_setting=='distro':\n",
@@ -482,7 +421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -534,7 +473,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -542,35 +481,81 @@
      "output_type": "stream",
      "text": [
       "distro\n",
-      "all_comp distro\n",
       "[['mix' '1000' 'const']\n",
       " ['gau_1' '1000' 'const']\n",
       " ['gau_2' '1000' 'const']\n",
       " ['exp' '1000' 'const']]\n",
-      "distro\n",
-      "distro\n",
-      "distro\n",
-      "distro\n",
+      "Experiment_results/SGD/distro/mix=q_true.txt\n",
+      "Experiment_results/SGD/distro/mix=q_batches.txt\n",
+      "Experiment_results/SGD/distro/mix=q_est_res.txt\n",
+      "Experiment_results/SGD/distro/mix=q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/mix=E.txt\n",
+      "Experiment_results/SGD/distro/gau_1=q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_1=q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_1=q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_1=q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_1=E.txt\n",
+      "Experiment_results/SGD/distro/gau_2=q_true.txt\n",
+      "Experiment_results/SGD/distro/gau_2=q_batches.txt\n",
+      "Experiment_results/SGD/distro/gau_2=q_est_res.txt\n",
+      "Experiment_results/SGD/distro/gau_2=q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/gau_2=E.txt\n",
+      "Experiment_results/SGD/distro/exp=q_true.txt\n",
+      "Experiment_results/SGD/distro/exp=q_batches.txt\n",
+      "Experiment_results/SGD/distro/exp=q_est_res.txt\n",
+      "Experiment_results/SGD/distro/exp=q_est_proc.txt\n",
+      "Experiment_results/SGD/distro/exp=E.txt\n",
       "data_size\n",
-      "all_comp datasize\n",
       "[['gau_1' '100' 'const']\n",
       " ['gau_1' '1000' 'const']\n",
       " ['gau_1' '100000' 'const']]\n",
-      "data_size\n",
-      "data_size\n",
-      "data_size\n",
+      "Experiment_results/SGD/data_size/100=q_true.txt\n",
+      "Experiment_results/SGD/data_size/100=q_batches.txt\n",
+      "Experiment_results/SGD/data_size/100=q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/100=q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/100=E.txt\n",
+      "Experiment_results/SGD/data_size/1000=q_true.txt\n",
+      "Experiment_results/SGD/data_size/1000=q_batches.txt\n",
+      "Experiment_results/SGD/data_size/1000=q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/1000=q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/1000=E.txt\n",
+      "Experiment_results/SGD/data_size/100000=q_true.txt\n",
+      "Experiment_results/SGD/data_size/100000=q_batches.txt\n",
+      "Experiment_results/SGD/data_size/100000=q_est_res.txt\n",
+      "Experiment_results/SGD/data_size/100000=q_est_proc.txt\n",
+      "Experiment_results/SGD/data_size/100000=E.txt\n",
       "step_size\n",
       "[['gau_1' '1000' 'const']\n",
       " ['gau_1' '1000' '2_div_sqrt_k']\n",
       " ['gau_1' '1000' '0.002_div_sqrt_k']]\n",
-      "step_size\n",
-      "step_size\n",
-      "step_size\n",
+      "Experiment_results/SGD/step_size/const=q_true.txt\n",
+      "Experiment_results/SGD/step_size/const=q_batches.txt\n",
+      "Experiment_results/SGD/step_size/const=q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/const=q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/const=E.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k=q_true.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k=q_batches.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k=q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k=q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/2_div_sqrt_k=E.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k=q_true.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k=q_batches.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k=q_est_res.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k=q_est_proc.txt\n",
+      "Experiment_results/SGD/step_size/0.002_div_sqrt_k=E.txt\n",
       "data_sequence\n",
       "[['gau_1' '1000' 'const']\n",
       " ['gau_1' '1000' 'const']]\n",
-      "distro\n",
-      "distro\n"
+      "Experiment_results/SGD/data_sequence/True=q_true.txt\n",
+      "Experiment_results/SGD/data_sequence/True=q_batches.txt\n",
+      "Experiment_results/SGD/data_sequence/True=q_est_res.txt\n",
+      "Experiment_results/SGD/data_sequence/True=q_est_proc.txt\n",
+      "Experiment_results/SGD/data_sequence/True=E.txt\n",
+      "Experiment_results/SGD/data_sequence/True=q_true.txt\n",
+      "Experiment_results/SGD/data_sequence/True=q_batches.txt\n",
+      "Experiment_results/SGD/data_sequence/True=q_est_res.txt\n",
+      "Experiment_results/SGD/data_sequence/True=q_est_proc.txt\n",
+      "Experiment_results/SGD/data_sequence/True=E.txt\n"
      ]
     }
    ],
@@ -582,10 +567,8 @@
     "        print (t)\n",
     "        folder_name = \"Experiment_results/SGD/\"+t+\"/\"\n",
     "        if t=='distro':\n",
-    "            print (\"all_comp distro\")\n",
     "            quantile_sgd_compare(folder_name, distros, [1000], ['const'], True)\n",
     "        elif t=='data_size':\n",
-    "            print (\"all_comp datasize\")\n",
     "            quantile_sgd_compare(folder_name, ['gau_1'], [100, 1000, 100000], ['const'], True)\n",
     "        elif t=='step_size':\n",
     "            quantile_sgd_compare(folder_name, ['gau_1'], [1000], stepsizes, True)\n",
