literature review modified

--- a/QuantEst/thesis/draft/literature_review.tex
+++ b/QuantEst/thesis/draft/literature_review.tex
@@ -10,10 +10,8 @@
 \maketitle
 
 \section{SGD 
-            \color{blue}{(should it be in Background instread?)}}
+            \color{blue}{(should it be in Background instead?)}}
     
-
-
 
 \section{Quantile Estimation From Streaming Data}
 \begin{enumerate}
@@ -40,16 +38,16 @@
         their users based on the 95th percentile of the traffic load
         in a billing cycle (Goldenberg et al. 2004).
         "
-    \item Pinball loss on quantile regression: \\
-        \cite{steinwartEstimatingConditionalQuantiles2011}\\
-        \cite{koenkerRegressionQuantiles1978}
-    \item Simultaneously predicting several quantiles: \\
-        \cite{sangnierJointQuantileRegression} (non-streaming)(multi-dimensional)(quantile regression)\\
+    % \item Pinball loss on quantile regression: \\
+    %     \cite{steinwartEstimatingConditionalQuantiles2011}\\
+    %     \cite{koenkerRegressionQuantiles1978}
+    % \item Simultaneously predicting several quantiles: \\
+    %     \cite{sangnierJointQuantileRegression} (non-streaming)(multi-dimensional)(quantile regression)\\
     \item Quantile Streaming: \\
         \cite{greenwaldQuantilesEquidepthHistograms2016}\\
         \cite{maFrugalStreamingEstimating2014}\\
-    \item Parallel Quantile Estimation from Streaming Data ((3) + (4)): \\
-        \cite{jainP2AlgorithmDynamic1985}\\
+    \item Parallel estimation \textbf{on other things} from Streaming Data: \\
+        % \cite{jainP2AlgorithmDynamic1985}\\
         \cite{ben-haimStreamingParallelDecision}\\
         \cite{pebayFormulasRobustOnepass2008}\\
 
