literature review modified

--- a/QuantEst/thesis/draft/SGD.tex
+++ b/QuantEst/thesis/draft/SGD.tex
@@ -79,5 +79,11 @@
         (and should I explain more about why stochastic gradient descent works?)
 
 
+
+\newpage
+\cite{ben-haimStreamingParallelDecision}
+\bibliography{Thesis}
+\bibliographystyle{ieeetr}
+
 \end{document}
 \end(documentclass)
