--- a/QuantEst/thesis/draft/literature_review.tex
+++ b/QuantEst/thesis/draft/literature_review.tex
@@ -1,6 +1,7 @@
 \documentclass[12pt]{article}
 \usepackage{xcolor}
 \input{nams.tex}
+\usepackage[numbers]{natbib}
 
 \title{Literature review outline}
 \date{\vspace{-5ex}}
@@ -48,7 +49,11 @@
         \cite{maFrugalStreamingEstimating2014}\\
     \item Parallel estimation \textbf{on other things} from Streaming Data: \\
         % \cite{jainP2AlgorithmDynamic1985}\\
-        \cite{ben-haimStreamingParallelDecision}\\
+        Related work on parallel quantile estimation on streaming data.\\
+        \cite{ben-haimStreamingParallelDecision} 
+        \textbf{A Streaming Parallel Decision Tree Algorithm}\\
+        Parallel quantile estimation from streaming data has been an issue targeted by different algorithms. \citeauthor{ben-haimStreamingParallelDecision}  propose the Streaming Parallel Decision Tree (SPDT) algorithm \cite{ben-haimStreamingParallelDecision}, {an on-line histogram building method from streaming data at parallel processors}.
+        \\\\
         \cite{pebayFormulasRobustOnepass2008}\\
 
 \end{enumerate}
@@ -67,8 +72,9 @@
 \textbf{My work} Quantile estimation on streaming data, which would be applied on 
 
 \newpage
+% \citeauthor{blassWhenAreTwo2008}
 \bibliography{Thesis}
-\bibliographystyle{ieeetr}
+\bibliographystyle{IEEEtranN}
 
 \end{document}
 \end(documentclass)
